[gd_scene load_steps=13 format=2]

[ext_resource path="res://GFX/Interface/PNG/glassPanel.png" type="Texture" id=1]
[ext_resource path="res://GFX/Interface/PNG/metalPanel.png" type="Texture" id=2]
[ext_resource path="res://Interface/Theme.tres" type="Theme" id=3]
[ext_resource path="res://GFX/Interface/PNG/metalPanel_greenCorner.png" type="Texture" id=7]
[ext_resource path="res://GFX/Interface/PNG/dotRed.png" type="Texture" id=8]
[ext_resource path="res://GFX/Interface/PNG/metalPanel_redCorner.png" type="Texture" id=9]
[ext_resource path="res://GFX/Interface/PNG/metalPanel_blueCorner.png" type="Texture" id=10]
[ext_resource path="res://Interface/Numpad.gd" type="Script" id=12]
[ext_resource path="res://SFX/twoTone1.ogg" type="AudioStream" id=13]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 9 )
region_rect = Rect2( 0, 0, 100, 100 )

[sub_resource type="StyleBoxTexture" id=2]
texture = ExtResource( 7 )
region_rect = Rect2( 0, 0, 100, 100 )

[sub_resource type="StyleBoxTexture" id=3]
texture = ExtResource( 10 )
region_rect = Rect2( 0, 0, 100, 100 )

[node name="Numpad" type="Popup"]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 300, 400 )
theme = ExtResource( 3 )
script = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
patch_margin_left = 10
patch_margin_top = 10
patch_margin_right = 10
patch_margin_bottom = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 15.0
margin_right = -10.0
margin_bottom = -15.0
custom_constants/separation = 9
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DisplayContainer" type="CenterContainer" parent="VBoxContainer"]
margin_right = 280.0
margin_bottom = 100.0

[node name="NinePatchRect" type="NinePatchRect" parent="VBoxContainer/DisplayContainer"]
margin_left = 15.0
margin_right = 265.0
margin_bottom = 100.0
rect_min_size = Vector2( 250, 100 )
texture = ExtResource( 1 )
patch_margin_left = 4
patch_margin_top = 4
patch_margin_right = 4
patch_margin_bottom = 4

[node name="Display" type="Label" parent="VBoxContainer/DisplayContainer"]
margin_left = 140.0
margin_top = 36.0
margin_right = 140.0
margin_bottom = 63.0
size_flags_horizontal = 3
size_flags_vertical = 6
custom_colors/font_color = Color( 1, 1, 1, 1 )
align = 1

[node name="ButtonContainer" type="CenterContainer" parent="VBoxContainer"]
margin_top = 109.0
margin_right = 280.0
margin_bottom = 373.0

[node name="GridContainer" type="GridContainer" parent="VBoxContainer/ButtonContainer"]
margin_left = 14.0
margin_right = 265.0
margin_bottom = 264.0
custom_constants/vseparation = 8
custom_constants/hseparation = 28
columns = 3

[node name="Button1" type="Button" parent="VBoxContainer/ButtonContainer/GridContainer"]
margin_right = 65.0
margin_bottom = 60.0
rect_min_size = Vector2( 65, 60 )
text = "1"

[node name="Button2" type="Button" parent="VBoxContainer/ButtonContainer/GridContainer"]
margin_left = 93.0
margin_right = 158.0
margin_bottom = 60.0
rect_min_size = Vector2( 65, 60 )
text = "2"

[node name="Button3" type="Button" parent="VBoxContainer/ButtonContainer/GridContainer"]
margin_left = 186.0
margin_right = 251.0
margin_bottom = 60.0
rect_min_size = Vector2( 65, 60 )
text = "3"

[node name="Button4" type="Button" parent="VBoxContainer/ButtonContainer/GridContainer"]
margin_top = 68.0
margin_right = 65.0
margin_bottom = 128.0
rect_min_size = Vector2( 65, 60 )
text = "4"

[node name="Button5" type="Button" parent="VBoxContainer/ButtonContainer/GridContainer"]
margin_left = 93.0
margin_top = 68.0
margin_right = 158.0
margin_bottom = 128.0
rect_min_size = Vector2( 65, 60 )
text = "5"

[node name="Button6" type="Button" parent="VBoxContainer/ButtonContainer/GridContainer"]
margin_left = 186.0
margin_top = 68.0
margin_right = 251.0
margin_bottom = 128.0
rect_min_size = Vector2( 65, 60 )
text = "6"

[node name="Button7" type="Button" parent="VBoxContainer/ButtonContainer/GridContainer"]
margin_top = 136.0
margin_right = 65.0
margin_bottom = 196.0
rect_min_size = Vector2( 65, 60 )
text = "7"

[node name="Button8" type="Button" parent="VBoxContainer/ButtonContainer/GridContainer"]
margin_left = 93.0
margin_top = 136.0
margin_right = 158.0
margin_bottom = 196.0
rect_min_size = Vector2( 65, 60 )
text = "8"

[node name="Button9" type="Button" parent="VBoxContainer/ButtonContainer/GridContainer"]
margin_left = 186.0
margin_top = 136.0
margin_right = 251.0
margin_bottom = 196.0
rect_min_size = Vector2( 65, 60 )
text = "9"

[node name="StatusLight" type="TextureRect" parent="VBoxContainer/ButtonContainer/GridContainer"]
margin_top = 204.0
margin_right = 65.0
margin_bottom = 264.0
texture = ExtResource( 8 )
expand = true

[node name="Button10" type="Button" parent="VBoxContainer/ButtonContainer/GridContainer"]
margin_left = 93.0
margin_top = 204.0
margin_right = 158.0
margin_bottom = 264.0
rect_min_size = Vector2( 65, 60 )
text = "0"

[node name="ButtonOK" type="Button" parent="VBoxContainer/ButtonContainer/GridContainer"]
margin_left = 186.0
margin_top = 204.0
margin_right = 251.0
margin_bottom = 264.0
rect_min_size = Vector2( 65, 60 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
text = "OK"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 13 )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
